--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
+    testCompile 'com.jayway.jsonpath:json-path:2.4.0'
 }
