--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
     testCompile 'com.jayway.jsonpath:json-path:2.4.0'
+    implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.14'
+    implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.14'
 }
