--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,18 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://repository.openmindonline.it"
+    }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
     testCompile 'com.jayway.jsonpath:json-path:2.4.0'
-    implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.14'
-    implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.14'
+    implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.20'
+    implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.20'
+    implementation group: 'com.lowagie', name: 'itextasian', version: '1.5.2'
+    //implementation group: 'com.itextpdf', name: 'itext-asian', version: '5.2.0'
+
 }
