--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.gal'
@@ -20,7 +21,25 @@ dependencies {
     testCompile 'com.jayway.jsonpath:json-path:2.4.0'
     implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.20'
     implementation group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.1.20'
-    implementation group: 'com.lowagie', name: 'itextasian', version: '1.5.2'
+    //implementation group: 'com.lowagie', name: 'itextasian', version: '1.5.2'
     //implementation group: 'com.itextpdf', name: 'itext-asian', version: '5.2.0'
-
 }
+
+//Fix broken gradle wrapper
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '6.2'
+//}
+
+application {
+    setMainClassName('com.gal.test.ListPackageResources')
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.gal.test.ListPackageResources'
+        )
+    }
+}
+
+//mainClass = 'com.gal.test.ListPackageResources'
